--- a/example/componentEmit/index.html
+++ b/example/componentEmit/index.html
@@ -9,6 +9,6 @@
 <body>
   <div id="app"></div>
 </body>
-<script src="../../lib/view.es.js" type="module"></script>
+<script src="../../lib/index.mjs" type="module"></script>
 <script src="./main.js" type="module"></script>
 </html>
